--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     build: build/
     volumes:
       - ./ansible:/etc/ansible
-      - ~/.ssh:/root/.ssh
+      - ~/.ssh:/tmp/.ssh
       - ./workdir:/ansible
